--- a/client/.gitignore
+++ b/client/.gitignore
@@ -31,7 +31,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-
+build/*
 # Dependency directories
 node_modules/
 jspm_packages/
