--- a/client/.gitignore
+++ b/client/.gitignore
@@ -32,6 +32,7 @@ bower_components
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 build/*
+dist/*
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -56,4 +57,4 @@ typings/
 
 # dotenv environment variables file
 .env
-
+.DS_Store
