--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "development": "NODE_PATH=./src NODE_ENV=development node ./src/server/server.babel.js",
     "production": "NODE_PATH=./src NODE_ENV=production node ./src/server/server.babel.js",
-    "build": "npm run build:client && npm run build:server",
-    "build:server": "NODE_ENV=production webpack --config ./webpack/server.babel.js",
-    "build:client": "NODE_ENV=production webpack --config ./webpack/client.babel.js"
+    "build": "rm -rf ./build && npm run build:client && npm run build:server",
+    "build:server": "NODE_ENV=production webpack --config ./webpack-config/webpack.config.server.js",
+    "build:client": "NODE_ENV=production webpack --config ./webpack-config/webpack.config.client.js"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -30,18 +30,22 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.6",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.7.1",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
+    "express": "^4.15.4",
     "history": "^4.7.2",
+    "immutable": "^3.8.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-loadable": "^4.0.5",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "next",
     "react-router-redux": "next",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.18.2"
   }
 }
