--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.73.0",
     "style-loader": "^0.18.2"
   }
 }
