--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import-inspector": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
@@ -30,6 +31,7 @@
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.6",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
@@ -43,11 +45,11 @@
     "react-dom": "^15.6.1",
     "react-loadable": "^4.0.5",
     "react-redux": "^5.0.6",
+    "react-responsive-redux": "^0.1.2",
     "react-router-dom": "next",
     "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.73.0",
-    "style-loader": "^0.18.2"
+    "semantic-ui-react": "^0.73.0"
   }
 }
