--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^15.6.1",
     "react-loadable": "^4.0.5",
     "react-redux": "^5.0.6",
+    "react-redux-toastr": "^7.1.5",
     "react-responsive-redux": "^0.1.2",
     "react-router-dom": "next",
     "react-router-redux": "next",
