--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.6",
@@ -50,6 +51,7 @@
     "react-router-dom": "next",
     "react-router-redux": "next",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.73.0"
   }
