--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "babel-plugin-import-inspector": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -38,6 +40,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
+    "compression": "^1.7.0",
     "express": "^4.15.4",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
