--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "express": "^4.15.4",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
