--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
