added login and logout functionality

--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.0",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.0.0",
     "mongoose": "^4.11.10",
