--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "author": "Mariusz Rajczakowski",
   "license": "MIT",
   "scripts": {
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "development": "NODE_PATH=./src NODE_ENV=development node ./src/server/server.babel.js",
     "production": "NODE_PATH=./src NODE_ENV=production node ./src/server/server.babel.js",
     "build": "rm -rf ./build && npm run build:client && npm run build:server",
@@ -15,6 +17,7 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import-inspector": "^2.0.0",
@@ -30,6 +33,7 @@
     "css-hot-loader": "^1.3.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "jest": "^21.1.0",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "redux-devtools-extension": "^2.13.2",
@@ -58,6 +62,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.0.0",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.73.0"
+    "semantic-ui-react": "^0.73.0",
+    "uuid": "^3.1.0"
   }
 }
