added react-test-renderer to dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-test-render": "^1.0.3",
+    "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
