--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.0.3"
   }
 }
