--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,8 @@
     "build": "rm -rf ./build && tsc",
     "build:watch": "rm -rf ./build && tsc --watch",
     "start": "node ./build/server.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "postinstall": "cp -n .env.example .env"
   },
   "devDependencies": {
@@ -17,15 +19,23 @@
     "@types/es6-shim": "^0.31.35",
     "@types/express": "^4.0.37",
     "@types/express-serve-static-core": "^4.0.52",
+    "@types/jest": "^21.1.2",
     "@types/jsonwebtoken": "^7.2.3",
     "@types/mime": "^1.3.1",
-    "@types/mongoose": "^4.7.21",
+    "@types/mongoose": "^4.7.23",
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.28",
     "@types/passport": "^0.3.4",
     "@types/passport-jwt": "^2.0.24",
     "@types/passport-local": "^1.0.31",
+    "@types/superagent": "^3.5.6",
+    "@types/supertest": "^2.0.3",
+    "babel-cli": "^6.26.0",
     "dotenv": "^4.0.0",
+    "jest": "^21.2.1",
+    "superagent": "^3.6.3",
+    "supertest": "^3.0.0",
+    "ts-jest": "^21.0.1",
     "typescript": "^2.5.2"
   },
   "dependencies": {
@@ -34,6 +44,7 @@
     "body-parser": "^1.18.0",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-validator": "^4.2.1",
     "jsonwebtoken": "^8.0.0",
     "mongoose": "^4.11.10",
     "morgan": "^1.8.2",
@@ -41,5 +52,17 @@
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.0.3"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx|js|jsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/__tests__/**/*.test.(ts|js)"
+    ]
   }
 }
