added sequelize instead of mongoose and fixed testing

--- a/api/.env.example
+++ b/api/.env.example
@@ -3,4 +3,9 @@ DEBUG=true
 PORT=3000
 TEST_PORT=3001
 JWT_SECRET=your_jwt_secret
-DB_HOST=localhost:27017
+DB_TYPE=mysql
+DB_HOST=localhost
+DB_PORT=3306 
+DB_NAME=test
+DB_USER=root
+DB_PASS=root
