--- a/api/package.json
+++ b/api/package.json
@@ -19,15 +19,16 @@
     "@types/es6-shim": "^0.31.35",
     "@types/express": "^4.0.37",
     "@types/express-serve-static-core": "^4.0.52",
+    "@types/iconv-lite": "^0.0.1",
     "@types/jest": "^21.1.2",
     "@types/jsonwebtoken": "^7.2.3",
     "@types/mime": "^1.3.1",
-    "@types/mongoose": "^4.7.23",
     "@types/morgan": "^1.7.32",
     "@types/node": "^8.0.28",
     "@types/passport": "^0.3.4",
     "@types/passport-jwt": "^2.0.24",
     "@types/passport-local": "^1.0.31",
+    "@types/sequelize": "^4.0.76",
     "@types/superagent": "^3.5.6",
     "@types/supertest": "^2.0.3",
     "babel-cli": "^6.26.0",
@@ -45,12 +46,14 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "express-validator": "^4.2.1",
+    "iconv-lite": "^0.4.19",
     "jsonwebtoken": "^8.0.0",
-    "mongoose": "^4.11.10",
     "morgan": "^1.8.2",
+    "mysql2": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "sequelize": "^4.13.5",
     "socket.io": "^2.0.3"
   },
   "jest": {
