added sequelize cli

--- a/api/.env.example
+++ b/api/.env.example
@@ -3,9 +3,13 @@ DEBUG=true
 PORT=3000
 TEST_PORT=3001
 JWT_SECRET=your_jwt_secret
-DB_TYPE=mysql
-DB_HOST=localhost
-DB_PORT=3306 
-DB_NAME=test
-DB_USER=root
-DB_PASS=root
+
+
+TEST_DB_USERNAME=root
+TEST_DB_PASSWORD=root
+TEST_DB_NAME=database_test
+
+PROD_DB_USERNAME=
+PROD_DB_PASSWORD=
+PROD_DB_NAME=
+PROD_DB_HOSTNAME=
