--- a/api/.env.example
+++ b/api/.env.example
@@ -3,13 +3,13 @@ DEBUG=true
 PORT=3000
 TEST_PORT=3001
 JWT_SECRET=your_jwt_secret
-
+JWT_EXPIRATION_TIME=3600
 
 TEST_DB_USERNAME=root
 TEST_DB_PASSWORD=root
 TEST_DB_NAME=database_test
 
-PROD_DB_USERNAME=
-PROD_DB_PASSWORD=
-PROD_DB_NAME=
-PROD_DB_HOSTNAME=
+PROD_DB_USERNAME=root
+PROD_DB_PASSWORD=password
+PROD_DB_NAME=database_prod
+PROD_DB_HOSTNAME=localhost
