--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",                    
     "moduleResolution": "node",           
     "baseUrl": ".",                      
-    "outDir": "build"
+    "outDir": "build",
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
