--- a/api/.sequelizerc
+++ b/api/.sequelizerc
@@ -1,7 +1,7 @@
 var path = require('path')
 
 module.exports = {
-  'config':          path.resolve(__dirname, 'src/config/database.json'),
+  'config':          path.resolve(__dirname, 'src/config/database.js'),
   'migrations-path': path.resolve(__dirname, 'src/database/migrations'),
   'seeders-path'   : path.resolve(__dirname, 'src/database/seeds'),
   'models-path'    : path.resolve(__dirname, 'src/models'),
