--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,11 +3,15 @@
     "target": "es5",                         
     "module": "commonjs",                    
     "moduleResolution": "node",           
-    "baseUrl": ".",                      
+    "baseUrl": ".",   
+    "allowJs": true,                   
     "outDir": "build",
     "sourceMap": true
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
