added repos, tests and strict mode to typescript

--- a/api/package.json
+++ b/api/package.json
@@ -5,22 +5,24 @@
   "author": "Mariusz Rajczakowski",
   "license": "MIT",
   "scripts": {
-    "db:create":"NODE_ENV=development && sequelize db:create",
-    "db:drop" :"NODE_ENV=development && sequelize db:drop",
+    "db:create": "NODE_ENV=development && sequelize db:create",
+    "db:drop": "NODE_ENV=development && sequelize db:drop",
     "db:recreate": "yarn db:drop && yarn db:create",
-    "db:restart" : "yarn db:recreate && yarn db:install", 
-    "db:start" : "yarn db:create && yarn db:install", 
+    "db:restart": "yarn db:recreate && yarn db:install",
+    "db:start": "yarn db:create && yarn db:install",
     "db:install": "NODE_ENV=development && sequelize db:migrate && sequelize db:seed:all",
     "build": "rm -rf ./build && tsc",
     "build:watch": "rm -rf ./build && tsc --watch",
     "start": "NODE_ENV=development && node ./build/server.js",
     "test": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --coverage --watch",
     "postinstall": "cp -n .env.example .env"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.5",
+    "@types/compression": "^0.0.34",
+    "@types/cors": "^2.8.1",
     "@types/dotenv": "^4.0.1",
     "@types/es6-shim": "^0.31.35",
     "@types/express": "^4.0.37",
@@ -35,6 +37,7 @@
     "@types/passport-jwt": "^2.0.24",
     "@types/passport-local": "^1.0.31",
     "@types/sequelize": "^4.0.76",
+    "@types/socket.io": "^1.4.31",
     "@types/superagent": "^3.5.6",
     "@types/supertest": "^2.0.3",
     "babel-cli": "^6.26.0",
