--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2
+
 general:
   branches:
     only:
@@ -14,18 +15,18 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
+  
+    working_directory: ~/repo/api
 
     steps:
-      - checkout
-
+      # - checkout
+      - checkout:
+      path: ~/repo
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: cd ~/repo/api
       - run: yarn install 
       - run: yarn test
