--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,4 @@
 version: 2
-
 general:
   branches:
     only:
@@ -15,13 +14,12 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
-  
+
     working_directory: ~/repo/api
 
     steps:
-      # - checkout
-      - checkout:
-      path: ~/repo
+      - checkout 
+          path: ~/repo
       # Download and cache dependencies
       - restore_cache:
           keys:
