--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - run:
           name: Install npm wee
-          command: npm install
+          command: sudo npm install
   test:
     docker:
       - image: circleci/node:4.8.2
