--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
       - run:
-          name: Install npm wee
+          name: Install npm
           command: sudo npm install
       - run:
           name: tests
-          command: yarn test
+          command: npm run test
  
