--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,8 @@ jobs:
   test:
     docker:
       - image: circleci/node:4.8.2
-    steps:
-      - checkout
-      - run:
-          name: Test
-          command: cd api; npm run test
+    override:
+      - cd api; npm run test
 
 workflows:
   version: 2
