--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,32 @@
 version: 2
-# general: 
-#   build_dir: api
 jobs:
   build:
     working_directory: ~/express-typescript-react-redux-universal/api
     # The primary container is an instance of the first list image listed. Your build commands run in this container.
     docker:
       - image: circleci/node:4.8.2
-
+    # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
+      - image: mongo:3.4.4
     steps:
       - checkout
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: Install npm
-          command: sudo npm install
-      - run:
-          name: tests
-          command: sudo npm run test
+          name: Install npm wee
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - node_modules
   test:
     docker:
       - image: circleci/node:4.8.2
-    override:
+    overrides:
       - cd api; npm run test
-
+    
 workflows:
   version: 2
   build_and_test:
@@ -35,4 +37,4 @@ workflows:
             - build
           filters:
             branches:
-              only: develop
+              only: master
