--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,9 @@ jobs:
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: Install npm wee
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - node_modules
+          name: Install npm 
+          command: sudo npm install
   test:
     docker:
       - image: circleci/node:4.8.2
