--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
       - run:
           name: Install npm 
           command: sudo npm install
+      - run: 
+          name: Where am I
+          comman: 'pwd; ls'
       - run:
           name: tests
           command: 'npm run test'
