--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/express-typescript-react-redux-universal/api
+    working_directory: ~/express-typescript-react-redux-universal
     # The primary container is an instance of the first list image listed. Your build commands run in this container.
     docker:
       - image: circleci/node:4.8.2
@@ -19,7 +19,7 @@ jobs:
           command: 'pwd; ls'
       - run:
           name: tests
-          command: 'npm run test'
+          command: 'cd api; npm run test'
   # test:
   #   overrides:
   #     - cd api; npm run test
