--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,25 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/express-typescript-react-redux-universal/api
+    working_directory: ~/express-typescript-react-redux-universal
     # The primary container is an instance of the first list image listed. Your build commands run in this container.
     docker:
       - image: circleci/node:4.8.2
     # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
-      - image: mongo:3.4.4
     steps:
       - checkout
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
+      - run: 
+          name: Where am I
+          command: 'pwd; ls'
       - run:
-          name: Install npm we
-          command: npm install
-  test:
-    working_directory: ~/express-typescript-react-redux-universal/api
-    docker:
-      - image: circleci/node:4.8.2
-    steps:
-      - checkout
+          name: Install npm 
+          command: 'cd api; sudo npm install'
+      - run: 
+          name: Where am I
+          command: 'pwd; ls'
       - run:
-          name: Test
-          command: npm test
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
-
-
+          name: tests
+          command: 'cd api; npm run test'
