--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,8 @@
     "allowJs": true,                   
     "outDir": "build",
     "sourceMap": true,
-    "strict" : true
+    "strict" : true,
+    "lib": ["es2015"]
   },
   "include": [
     "src/**/*"
