--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "@types/superagent": "^3.5.6",
     "@types/supertest": "^2.0.3",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "dotenv": "^4.0.0",
@@ -72,6 +73,7 @@
   },
   "jest": {
     "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "globals": {
@@ -86,7 +88,10 @@
         }
       }
     },
-    "moduleDirectories": ["node_modules", "src"],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
