--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,8 +7,7 @@
     "allowJs": true,                   
     "outDir": "build",
     "sourceMap": true,
-    "strict" : true,
-    "lib": ["es2015"]
+    "strict" : true
   },
   "include": [
     "src/**/*"
