--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "dotenv": "^4.0.0",
     "jest": "^21.2.1",
