--- a/api/package.json
+++ b/api/package.json
@@ -89,10 +89,10 @@
         }
       }
     },
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
+    // "moduleDirectories": [
+    //   "node_modules",
+    //   "src"
+    // ],
     "moduleFileExtensions": [
       "ts",
       "js"
