--- a/api/package.json
+++ b/api/package.json
@@ -80,12 +80,8 @@
     "globals": {
       "ts-jest": {
         "babelConfig": {
-          "presets": [
-            "env"
-          ],
-          "plugins": [
-            "transform-async-to-generator"
-          ]
+          "presets": [ "env" ],
+          "plugins": [ "transform-async-to-generator"  ]
         }
       }
     },
