--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,10 +1,12 @@
 {
-  "presets": [
-    "env",
-    "stage-0"
-  ],
-  "plugins": [
-    "transform-runtime",
-    "transform-async-to-generator"
-  ]
+  "env": {
+    "test": {
+      "presets": ["env", "react", "stage-2"],
+      "plugins": ["transform-export-extensions"],
+      "only": [
+        "./**/*.js",
+        "node_modules/jest-runtime"
+      ]
+    }
+  }
 }
