--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,16 +1,15 @@
 {
   "presets": [
-    ["es2015", {"modules": false}]
+    ["es2015", {"modules": false}], "stage-0"
   ],
+  "plugins": [ "transform-object-rest-spread", "transform-es2015-modules-commonjs",
+    "transform-export-extensions", "transform-async-to-generator", "transform-runtime"],
 
   "env": {
     "test": {
       "presets": [ ["es2015", {"modules": false}], "stage-0"],
-      "plugins": ["transform-es2015-modules-commonjs","transform-export-extensions", "transform-async-to-generator", "transform-runtime"],
-      "only": [
-        "./**/*.js",
-        "node_modules/jest-runtime"
-      ]
+      "plugins": [ "transform-object-rest-spread", "transform-es2015-modules-commonjs",
+        "transform-export-extensions", "transform-async-to-generator", "transform-runtime"]
     }
   }
   
