--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "build": "rm -rf ./build && tsc",
     "build:watch": "rm -rf ./build && tsc --watch",
     "start": "NODE_ENV=development && node ./build/server.js",
-    "test": "./node_modules/.bin/jest --coverage --no-cache",
+    "test": "./node_modules/.bin/jest --coverage --no-cache --debug",
     "test:watch": "jest --coverage --watch",
     "postinstall": "cp -n .env.example .env"
   },
