--- a/api/.babelrc
+++ b/api/.babelrc
@@ -8,7 +8,8 @@
             "useBuiltIns": "usage",
             "debug": false
         }
-    ], "stage-0"]
+    ], "stage-0"],
+    "plugins":["transform-runtime"]
     }
   }
   
