--- a/api/package.json
+++ b/api/package.json
@@ -88,8 +88,14 @@
         "useBabelrc": true
       }
     },
-    "bail":true,
-    "moduleFileExtensions": ["js", "jsx", "json", "ts", "tsx"],
+    "bail": true,
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "json",
+      "ts",
+      "tsx"
+    ],
     "mapCoverage": true,
     "transformIgnorePatterns": [
       "node_modules/(?!(express-validator)/)"
