--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,4 +1,12 @@
-{
+{"presets": [  "es2015",
+  ["env",
+  {
+      "modules": "commonjs",
+      "useBuiltIns": "usage",
+      "debug": false
+  }
+], "stage-0"],
+"plugins":["transform-runtime"],
   "env": {
     "test": {
       "presets": [  "es2015",
