--- a/api/.babelrc
+++ b/api/.babelrc
@@ -3,14 +3,15 @@
   "env": {
     "test": {
       "presets": [  
-        "es2015",
           ["env",
-          {
-              "modules": "commonjs",
-              "useBuiltIns": "usage",
-              "debug": false
-          }
-      ], "stage-0"],
+            {
+                "modules": "commonjs",
+                "useBuiltIns": "usage",
+                "debug": false
+            }
+          ],
+          "stage-0"
+      ],
       "plugins":["transform-runtime"]
     }
   }
