--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "build": "rm -rf ./build && tsc",
     "build:watch": "rm -rf ./build && tsc --watch",
     "start": "NODE_ENV=development && node ./build/server.js",
-    "test": "./node_modules/.bin/jest --coverage --debug",
+    "test": "./node_modules/.bin/jest --coverage",
     "test:watch": "jest --coverage --watch",
     "postinstall": "cp -n .env.example .env"
   },
@@ -42,13 +42,8 @@
     "@types/supertest": "^2.0.3",
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.2.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^4.0.0",
     "jest": "^21.2.1",
