--- a/api/.env.example
+++ b/api/.env.example
@@ -13,3 +13,6 @@ PROD_DB_USERNAME=root
 PROD_DB_PASSWORD=password
 PROD_DB_NAME=database_prod
 PROD_DB_HOSTNAME=localhost
+
+MAILGUN_DOMAIN=
+MAILGUN_API_KEY=
