--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "build": "rm -rf ./build && tsc",
     "build:watch": "rm -rf ./build && tsc --watch",
     "start": "NODE_ENV=development && node ./build/server.js",
-    "test": "./node_modules/.bin/jest --coverage --runInBand",
+    "test": "./node_modules/.bin/jest --coverage --runInBand && codecov",
     "test:watch": "jest --coverage --runInBand --watch",
     "postinstall": "cp -n .env.example .env"
   },
@@ -45,6 +45,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
+    "codecov": "^3.0.0",
     "dotenv": "^4.0.0",
     "jest": "^21.2.1",
     "sequelize-cli": "^3.0.0",
@@ -76,6 +77,8 @@
     "socket.io": "^2.0.3"
   },
   "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
     "transform": {
       "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
